--- a/app/design/frontend/Bijay/custom/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Bijay/custom/Magento_Theme/layout/default.xml
@@ -3,9 +3,17 @@
         <referenceBlock name="logo">
             <arguments>
                 <argument name="logo_file" xsi:type="string">images/custom_logo.jpg</argument>
-                <argument name="logo_img_width" xsi:type="number">100</argument>
-                <argument name="logo_img_height" xsi:type="number">100</argument>
+                <argument name="logo_img_width" xsi:type="number">50</argument>
+                <argument name="logo_img_height" xsi:type="number">50</argument>
             </arguments>
         </referenceBlock>
+
+        <referenceContainer name="sidebar.additional">
+            <block class="Magento\Cms\Block\Block" name="sidebar-custom-block" after="wishlist_sidebar">
+                <arguments>
+                    <argument name="block_id" xsi:type="string">sidebar-custom-block</argument>
+                </arguments>
+            </block>
+        </referenceContainer>
     </body>
 </page>
