changed price position

--- a/app/code/Bijay/QuantityChange/view/frontend/layout/catalog_product_view.xml
+++ b/app/code/Bijay/QuantityChange/view/frontend/layout/catalog_product_view.xml
@@ -11,5 +11,6 @@
                 <argument name="template" xsi:type="string">Bijay_QuantityChange::catalog/product/view/addtocart.phtml</argument>
             </action>
         </referenceBlock>
+        <referenceBlock name="product.price.final" remove="true"/>
     </body>
 </page>
