--- a/app/code/Bijay/QuantityChange/view/frontend/templates/catalog/product/view/addtocart.phtml
+++ b/app/code/Bijay/QuantityChange/view/frontend/templates/catalog/product/view/addtocart.phtml
@@ -56,7 +56,8 @@
                     ]
                 ]
             )
-            ->toHtml();?>
+            ->toHtml();
+        ?>
         <div class="actions">
             <button type="submit"
                     title="<?= $block->escapeHtmlAttr($buttonTitle) ?>"
