--- a/app/design/frontend/Bijay/custom/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Bijay/custom/Magento_Catalog/layout/catalog_category_view.xml
@@ -3,5 +3,6 @@
         <referenceBlock name="category.products.list">
             <block class="Magento\Framework\View\Element\Template" template="Magento_Catalog::product/list.phtml"/>
         </referenceBlock>
+        <move element="category.cms" destination="content" before="-"/>
     </body>
 </page>
